--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "sbtc": "^0.1.0",
     "sbtc-bridge-lib": "file:~/Code/sbtc-bridge-lib-1.1.2.tgz"
   },
   "devDependencies": {
