--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@noble/hashes": "^1.3.2",
     "@scure/base": "^1.1.3",
+    "@scure/btc-signer": "^1.1.0",
     "@stacks/connect": "^7.4.0",
     "@stacks/network": "^6.8.1",
     "@stacks/transactions": "^6.9.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "sbtc": "^0.1.0",
+    "sbtc": "^0.1.5",
     "sbtc-bridge-lib": "file:~/Code/sbtc-bridge-lib-1.1.2.tgz"
   },
   "devDependencies": {
